test/compile_error/typemismatch.conf.5.def
config type_mismatch_conf {
	enum foo_t { FOO }
	enum bar_t { BAR }
	foo : foo_t = BAR;
}
